; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/sh/extr_fsi.c_fsi_pointer.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/sh/extr_fsi.c_fsi_pointer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_pcm_substream = type { i32 }
%struct.fsi_priv = type { i32 }
%struct.fsi_stream = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_pcm_substream*)* @fsi_pointer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fsi_pointer(%struct.snd_pcm_substream* %0) #0 {
  %2 = alloca %struct.snd_pcm_substream*, align 8
  %3 = alloca %struct.fsi_priv*, align 8
  %4 = alloca %struct.fsi_stream*, align 8
  store %struct.snd_pcm_substream* %0, %struct.snd_pcm_substream** %2, align 8
  %5 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %2, align 8
  %6 = call %struct.fsi_priv* @fsi_get_priv(%struct.snd_pcm_substream* %5)
  store %struct.fsi_priv* %6, %struct.fsi_priv** %3, align 8
  %7 = load %struct.fsi_priv*, %struct.fsi_priv** %3, align 8
  %8 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %2, align 8
  %9 = call %struct.fsi_stream* @fsi_stream_get(%struct.fsi_priv* %7, %struct.snd_pcm_substream* %8)
  store %struct.fsi_stream* %9, %struct.fsi_stream** %4, align 8
  %10 = load %struct.fsi_priv*, %struct.fsi_priv** %3, align 8
  %11 = load %struct.fsi_stream*, %struct.fsi_stream** %4, align 8
  %12 = getelementptr inbounds %struct.fsi_stream, %struct.fsi_stream* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @fsi_sample2frame(%struct.fsi_priv* %10, i32 %13)
  ret i32 %14
}

declare dso_local %struct.fsi_priv* @fsi_get_priv(%struct.snd_pcm_substream*) #1

declare dso_local %struct.fsi_stream* @fsi_stream_get(%struct.fsi_priv*, %struct.snd_pcm_substream*) #1

declare dso_local i32 @fsi_sample2frame(%struct.fsi_priv*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
